server/infra/prod/k8s/00-jump-host.yml
apiVersion: v1
kind: Pod
metadata:
  name: jump-host
  namespace: sms-proxy
  labels:
    app.kubernetes.io/name: ubuntu
    app.kubernetes.io/version: "24.04"
    app.kubernetes.io/instance: ubuntu
    app.kubernetes.io/component: jump-host
    app.kubernetes.io/part-of: sms-proxy
spec:
  containers:
    - name: ubuntu
      image: ubuntu:24.04
      command: ["/bin/bash", "-c", "while true; do sleep 3600; done"]
      resources:
        limits:
          memory: "256Mi"
          cpu: "250m"
