server/infra/prod/k8s/04-registry.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oci-registry
  namespace: sms-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oci-registry
  template:
    metadata:
      labels:
        app: oci-registry
    spec:
      volumes:
        - name: oci-registry-tls-certificate
          secret:
            secretName: oci-registry-tls-certificate
        - name: root-ca-tls-certificate
          secret:
            secretName: ca-key-pair-root
        - name: oci-registry-config
          configMap:
            name: oci-registry-config
        - name: htpasswd-cache
          emptyDir:
            sizeLimit: 5Mi
            medium: Memory
        - name: ca-certificates
          emptyDir:
            sizeLimit: 100Mi
            medium: Memory
      containers:
        - name: oci-registry
          image: registry:2.8.3
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - containerPort: 5000
              name: https
              protocol: TCP
          # TODO: all of the below
          # livenessProbe: &livenessProbe
          #   httpGet:
          #     path: /healthz
          #     port: http
          #   failureThreshold: 2
          #   periodSeconds: 5
          # readinessProbe: *livenessProbe
          # startupProbe:
          #   <<: *livenessProbe
          #   periodSeconds: 5
          #   initialDelaySeconds: 10
          # securityContext: # TODO: re-evaluate
          #   allowPrivilegeEscalation: false
          #   capabilities:
          #     drop:
          #       - ALL
          #   readOnlyRootFilesystem: true
          #   runAsGroup: 2000
          #   runAsNonRoot: true
          #   runAsUser: 2000
          #   seccompProfile:
          #     type: RuntimeDefault
          volumeMounts:
            - name: oci-registry-tls-certificate
              readOnly: true
              mountPath: "/certs"
            - name: oci-registry-config
              mountPath: "/etc/docker/registry"
            - name: htpasswd-cache
              mountPath: "/var/run/secrets/htpasswd-cache"
              readOnly: true
            - name: ca-certificates
              mountPath: "/etc/ssl/certs"
              readOnly: true
---
apiVersion: v1
kind: Service
metadata:
  name: oci-registry
  namespace: sms-proxy
spec:
  type: LoadBalancer # We're not using an Ingress, because it would've been managed by Traefik with separate and buggy TLS configuration
  selector:
    app: oci-registry
  ports:
    - port: 5000
      targetPort: https
      name: https
