server/infra/prod/k8s/08-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sms-proxy
  namespace: sms-proxy
  labels:
    app: sms-proxy
    app.kubernetes.io/name: sms-proxy
    app.kubernetes.io/instance: sms-proxy-deployment
    app.kubernetes.io/component: sms-proxy
    app.kubernetes.io/part-of: sms-proxy
  annotations:
    wave.pusher.com/update-on-config-change: "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sms-proxy
  template:
    metadata:
      labels:
        app: sms-proxy
        app.kubernetes.io/name: sms-proxy
        app.kubernetes.io/instance: sms-proxy
        app.kubernetes.io/component: sms-proxy
        app.kubernetes.io/part-of: sms-proxy
      annotations:
        consul.hashicorp.com/connect-inject: "true"
        consul.hashicorp.com/service-tags: "\
          traefik.enable=true,\
          traefik.http.routers.sms-proxy-metrics.entrypoints=websecure,\
          traefik.http.routers.sms-proxy-metrics.rule=PathPrefix(`/metrics`),\
          traefik.http.routers.sms-proxy.entrypoints=websecure,\
          traefik.http.routers.sms-proxy.rule=PathPrefix(`/`)"
    spec:
      volumes:
        - name: tls-postgresql-client-sms-proxy
          secret:
            secretName: tls-postgresql-client-sms-proxy
      imagePullSecrets:
        - name: credentials-docker-oci-registry
      containers:
        - name: sms-proxy
          image: "oci-registry:5555/sms-proxy/sms-proxy:latest"
          resources:
            limits:
              memory: "256Mi"
              cpu: 2
          ports:
            - name: http
              containerPort: 3000
            - name: metrics
              containerPort: 4000
          livenessProbe: &livenessProbe
            httpGet:
              path: /healthz
              port: http
            failureThreshold: 2
            periodSeconds: 5
          readinessProbe: *livenessProbe
          startupProbe:
            <<: *livenessProbe
            periodSeconds: 5
            initialDelaySeconds: 10
          securityContext: # TODO: re-evaluate
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 2000
            runAsNonRoot: true
            runAsUser: 2000
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: tls-postgresql-client-sms-proxy
              readOnly: true
              mountPath: "/var/run/secrets/tls-postgresql-client-sms-proxy"
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
---
apiVersion: v1
kind: Service
metadata:
  name: sms-proxy
  namespace: sms-proxy
  labels:
    app.kubernetes.io/name: sms-proxy
    app.kubernetes.io/instance: sms-proxy-service
    app.kubernetes.io/component: sms-proxy
    app.kubernetes.io/part-of: sms-proxy
spec:
  type: ClusterIP
  selector:
    app: sms-proxy
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
    - name: metrics
      port: 4000
      targetPort: 4000
      protocol: TCP
