server/infra/prod/k8s/07-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sms-proxy
  namespace: sms-proxy
  labels:
    app: sms-proxy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sms-proxy
  template:
    metadata:
      labels:
        app: sms-proxy
    spec:
      volumes:
        - name: sms-proxy-secret-postgresql-client
          secret:
            secretName: sms-proxy-secret-postgresql-client
      containers:
        - name: sms-proxy
          image: sms-proxy:latest # FIXME: local OCI image in the cluster
          imagePullPolicy: Never # FIXME: remove once actual OCI repository is available
          resources:
            limits:
              memory: "256Mi"
              cpu: "250m"
          ports:
            - name: http
              containerPort: 3000
            - name: metrics
              containerPort: 4000
          livenessProbe: &livenessProbe
            httpGet:
              path: /healthz
              port: http
            failureThreshold: 2
            periodSeconds: 5
          readinessProbe: *livenessProbe
          startupProbe:
            <<: *livenessProbe
            periodSeconds: 5
            initialDelaySeconds: 10
          securityContext: # TODO: re-evaluate
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 2000
            runAsNonRoot: true
            runAsUser: 2000
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: sms-proxy-secret-postgresql-client
              readOnly: true
              mountPath: "/var/run/secrets/sms-proxy-secret-postgresql-client"
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
---
apiVersion: v1
kind: Service
metadata:
  name: sms-proxy
  namespace: sms-proxy
  labels:
    app.kubernetes.io/name: sms-proxy
spec:
  type: ClusterIP
  selector:
    app: sms-proxy
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
    - name: metrics
      port: 4000
      targetPort: 4000
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sms-proxy-ingress
  namespace: sms-proxy
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /metrics
            pathType: Exact
            backend:
              service:
                name: sms-proxy
                port:
                  name: metrics
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sms-proxy
                port:
                  name: http
